--- a/style.CSS
+++ b/style.CSS
@@ -26,4 +26,63 @@ section{
     background-image: url(img/bgCOMMENTS.png);
 }
 .main-block, .about-block, .skills-block, 
-.works-block, .
+.works-block, .comments-block{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 70vh;
+}
+
+.main-block{
+    display: flex;
+    flex-direction: column;
+    max-height: 100vh;
+}
+
+.main-content{
+    width: 849px;
+    height: 223px;
+    background-image: url(img/form1.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding-left: 30px;
+}
+
+.main-title{
+    color: #2B2D35;
+    font-size: 80px;
+}
+
+.main-subtitle{
+    color: #2B2D35;
+    font-size: 20px;
+    font-family: 'Comfortaa';
+    position: relative;
+    top: -50px;
+}
+
+.button{
+    width: 200px;
+    height: 60px;
+    border-radius: 100px;
+    border: 2px solid #000;
+    background: #bbff2c;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px 5px 0 #000;
+    margin-top: 20px;
+}
+
+.button a {
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.button{
+    transition-duration: 0.3s;
+}
+
+.button:hover{
+    background: #a0d826;
+}
